# clawhdf5

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
benchmarks/: cross_platform.sh
benchmarks/longmemeval/: README.md
crates/clawhdf5/: Cargo.toml
crates/clawhdf5-accel/: Cargo.toml
crates/clawhdf5-accel/src/: lib.rs
crates/clawhdf5-agent/: Cargo.toml  README.md
crates/clawhdf5-agent/benches/: bench.rs  memory_bench.rs
crates/clawhdf5-agent/src/: accelerate_search.rs  agents_md.rs  anomaly.rs  async_memory.rs  blas_search.rs  bm25.rs  cache.rs  confidence.rs  consolidation.rs  decision_gate.rs  entity_extract.rs  ephemeral.rs  gpu_search.rs  hybrid.rs  ivf.rs  knowledge.rs  lib.rs  memory_strategy.rs  multimodal.rs  openclaw.rs  pq.rs  provenance.rs  query_expand.rs  reranker.rs  schema.rs  search.rs  session.rs  storage.rs  strategy.rs  temporal.rs  vector_search.rs  wal.rs
crates/clawhdf5-agent/tests/: e2e_tests.rs  memx_comparison.rs  stress_tests.rs
crates/clawhdf5-android/: Cargo.toml
crates/clawhdf5-android/src/: lib.rs
crates/clawhdf5-ann/: Cargo.toml
crates/clawhdf5-ann/src/: hnsw.rs  lib.rs
crates/clawhdf5-bench/: Cargo.toml
crates/clawhdf5-cli/: Cargo.toml
crates/clawhdf5-cli/src/: main.rs
crates/clawhdf5-derive/: Cargo.toml
crates/clawhdf5-derive/src/: lib.rs
crates/clawhdf5-filters/: Cargo.toml
crates/clawhdf5-filters/benches/: compression_bench.rs  deflate_bench.rs
crates/clawhdf5-filters/src/: fast_deflate.rs
crates/clawhdf5-format/: Cargo.toml
crates/clawhdf5-format/benches/: bench.rs  parallel_decompress_bench.rs
crates/clawhdf5-format/examples/: parallel_scaling.rs
crates/clawhdf5-format/fuzz/: Cargo.toml
crates/clawhdf5-format/fuzz/fuzz_targets/: fuzz_btree_v2.rs  fuzz_dataspace.rs  fuzz_datatype.rs  fuzz_filter_pipeline.rs  fuzz_fractal_heap.rs  fuzz_full_file.rs  fuzz_object_header.rs  fuzz_superblock.rs
crates/clawhdf5-format/src/: attribute.rs  chunked_read.rs  chunked_write.rs  dict_encoding.rs  group_v1.rs  group_v2.rs  lib.rs  provenance.rs  selection.rs  vl_data.rs
crates/clawhdf5-format/tests/: derive_tests.rs  integration_test.rs  reference_tests.rs  robustness_tests.rs  writer_h5py_tests.rs
crates/clawhdf5-gpu/: Cargo.toml
crates/clawhdf5-gpu/benches/: bench.rs
crates/clawhdf5-gpu/src/: accelerator.rs  lib.rs
crates/clawhdf5-gpu/tests/: gpu_tests.rs
crates/clawhdf5-io/: Cargo.toml
crates/clawhdf5-io/src/: async_read.rs  lib.rs  mmap.rs  subfiling.rs  vol.rs
crates/clawhdf5-migrate/: Cargo.toml  README.md
crates/clawhdf5-migrate/src/: hdf5_writer.rs  main.rs  sqlite_reader.rs  validate.rs
crates/clawhdf5-napi/: Cargo.toml
crates/clawhdf5-napi/src/: lib.rs
crates/clawhdf5-netcdf4/: Cargo.toml
crates/clawhdf5-netcdf4/src/: cf.rs  dimension.rs  error.rs  group.rs  lib.rs  types.rs  variable.rs
crates/clawhdf5-netcdf4/tests/: interop_tests.rs  netcdf4_tests.rs
crates/clawhdf5-py/: Cargo.toml
crates/clawhdf5-py/src/: attrs.rs  dataset.rs  file.rs  group.rs  lib.rs
crates/clawhdf5-types/: Cargo.toml
crates/clawhdf5/benches/: mmap_bench.rs  parallel_bench.rs
crates/clawhdf5/src/: error.rs  lazy.rs  lib.rs  mmap_file.rs  reader.rs  types.rs  writer.rs
crates/clawhdf5/tests/: h5py_interop_tests.rs  integration_tests.rs  mmap_default_tests.rs  mmap_lazy_tests.rs  parallel_integration.rs  zerocopy_tests.rs
docs/: QUICKSTART.md  README.md  USE_CASES.md  migration-guide.md  openclaw-config.md  openclaw-integration.md
