[package]
name = "clawhdf5-accel"
version = "2.0.0"
edition = "2024"
description = "SIMD-accelerated operations for rustyhdf5"
license = "MIT"
repository = "https://github.com/redclawsystems/clawhdf5"
readme = "README.md"
keywords = ["hdf5", "simd", "acceleration", "performance"]
categories = ["science", "algorithms"]

[features]
default = []
float16 = ["dep:half"]
avx512 = []

[dependencies]
half = { version = "2", optional = true }

[package.metadata.docs.rs]
features = []
targets = ["x86_64-unknown-linux-gnu"]
