[package]
name = "clawhdf5-ann"
version = "2.0.0"
edition = "2024"
description = "HNSW approximate nearest neighbor index stored as HDF5"
license = "MIT"
repository = "https://github.com/redclawsystems/clawhdf5"
readme = "README.md"
keywords = ["hdf5", "ann", "hnsw", "nearest-neighbor"]
categories = ["algorithms", "science"]

[dependencies]
clawhdf5-format = { path = "../clawhdf5-format", version = "2.0.0" }
clawhdf5-io = { path = "../clawhdf5-io", version = "2.0.0" }
