[package]
name = "clawhdf5-cli"
version = "2.0.0"
edition = "2024"
license = "MIT"
description = "CLI for clawhdf5 agent memory — create, save, search, recall, stats"
repository = "https://github.com/redclawsystems/clawhdf5"
keywords = ["hdf5", "ai", "memory", "agent", "cli"]
categories = ["command-line-utilities", "science"]
readme = "../../README.md"

[[bin]]
name = "clawhdf5"
path = "src/main.rs"

[dependencies]
clawhdf5-agent = { path = "../clawhdf5-agent", version = "2.0.0" }
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
