[package]
name = "clawhdf5-napi"
version = "2.0.0"
edition = "2024"
description = "Node.js native addon (napi-rs) exposing clawhdf5-agent to TypeScript/JavaScript"
license = "MIT"
repository = "https://github.com/redclawsystems/clawhdf5"

[lib]
crate-type = ["cdylib"]

[dependencies]
clawhdf5-agent = { path = "../clawhdf5-agent", version = "2.0.0" }
napi = { version = "2", default-features = false, features = ["napi9"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
