[package]
name = "clawhdf5-netcdf4"
version = "2.0.0"
edition = "2024"
description = "NetCDF-4 read support built on rustyhdf5 — pure Rust, no C dependencies"
license = "MIT"
repository = "https://github.com/redclawsystems/clawhdf5"
readme = "README.md"
keywords = ["netcdf", "netcdf4", "hdf5", "science", "climate"]
categories = ["parser-implementations", "science"]

[dependencies]
clawhdf5 = { path = "../clawhdf5", version = "2.0.0" }
clawhdf5-format = { path = "../clawhdf5-format", version = "2.0.0" }

[dev-dependencies]
tempfile = "3"
