[package]
name = "clawhdf5-types"
version = "2.0.0"
edition = "2024"
description = "HDF5 type system definitions for rustyhdf5"
license = "MIT"
repository = "https://github.com/redclawsystems/clawhdf5"
readme = "README.md"
keywords = ["hdf5", "types", "science", "data"]
categories = ["data-structures", "science"]
